# selfdriving-robot-car

./: .gitignore  LICENSE  README.md
3d_print_model/: LICENSE.txt
devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
devel/.private/actuator_controller/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/.private/actuator_controller/lib/actuator_controller/: actuator_controller
devel/.private/actuator_controller/lib/pkgconfig/: actuator_controller.pc
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/robot_racing_car/: .catkin  .rosinstall  setup.sh
devel/lib/actuator_controller/: actuator_controller
devel/lib/pkgconfig/: actuator_controller.pc  catkin_tools_prebuild.pc  robot_racing_car.pc
devel/share/actuator_controller/cmake/: actuator_controllerConfig-version.cmake  actuator_controllerConfig.cmake
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/robot_racing_car/cmake/: robot_racing_carConfig-version.cmake  robot_racing_carConfig.cmake
logs/actuator_controller/: build.make.003.log.stderr
model/: model.py  steering_model.py
scripts/: autopilot_controller.py  explore_training_data.py  setup_raspi_variables.sh  setup_rosmaster_variables.sh  start_actuator_node.sh  start_camera_node.sh  start_joystick_node.sh  start_joystick_throttle.sh  start_log_viewer.sh
src/actuator_controller/: CMakeLists.txt
src/actuator_controller/src/: ActuatorController.cpp  I2C.h  PCA9685.cpp  SteeringController.cpp
src/autonomous_controller/: CMakeLists.txt  package.xml
src/autonomous_controller/src/: AutonomousController.cpp
src/autopilot_controller/: CMakeLists.txt  package.xml
src/autopilot_controller/src/: autopilot_controller.py
src/robot_racing_car/: CMakeLists.txt  package.xml
src/robot_racing_car/arduino/: arduino.ino
src/robot_racing_car/model/: model.py
src/robot_racing_car/nodes/: autonomous_controller.py  constants.py  robot_car_controller.py  steering_controller.py  traning_data_controller.py
src/robot_racing_car/scripts/: explore_training_data.py  setup_variables.sh  start_arduino_node.sh  start_camera_node.sh  start_camera_preview.sh  start_controller.sh  start_joystick_node.sh  start_steering_node.sh
src/steering_controller/: CMakeLists.txt  package.xml
src/steering_controller/src/: ActuatorController.cpp  I2C.cpp  PCA9685.h  SteeringController.cpp
src/training_controller/: CMakeLists.txt  package.xml
src/training_controller/src/: TrainingController.cpp
(+4 files in other folders)
