<?xml version="1.0"?>
<package>
  <name>robot_racing_car</name>
  <version>0.0.0</version>
  <description>The robot_racing_car package</description>
  <maintainer email="bdjukic@gmail.com">Bogdan Djukic</maintainer>
  <license>BSD</license>

  <url type="website">https://medium.com/@bdjukic</url>
  <author email="bdjukic@gmail.com">Bogdan Djukic</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
