<?xml version="1.0"?>
<package>
  <name>actuator_controller</name>
  <version>1.0.0</version>
  <description>The actuator_controller package</description>

  <maintainer email="bdjukic@gmail.com">Bogdan Djukic</maintainer>
  <license>BSD</license>
  <url type="website">https://medium.com/@bdjukic</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
